<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appUpdate="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/header"
            appUpdate:layout_constraintEnd_toEndOf="parent"
            appUpdate:layout_constraintStart_toStartOf="parent"
            appUpdate:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/ln_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_15"
            android:paddingTop="@dimen/padding_15"
            android:paddingEnd="@dimen/padding_15"
            android:paddingBottom="@dimen/padding_75"
            appUpdate:layout_constraintEnd_toEndOf="parent"
            appUpdate:layout_constraintStart_toStartOf="parent"
            appUpdate:layout_constraintTop_toBottomOf="@+id/header">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/img_size_large"
                android:layout_height="@dimen/img_size_large"
                android:layout_marginTop="@dimen/margin_10"
                appUpdate:civ_border_color="#56ffffff"
                appUpdate:civ_border_width="10dp" />

            <TextView
                android:id="@+id/txt_username"
                style="@style/Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_title" />

            <TextView
                android:id="@+id/txt_userid"
                style="@style/SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/userid"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_subheading" />

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/cv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_25"
            android:layout_marginTop="-70dp"
            android:layout_marginEnd="@dimen/margin_25"
            android:layout_marginBottom="@dimen/margin_25"
            android:clipChildren="true"
            android:clipToPadding="true"
            appUpdate:cardCornerRadius="4dp"
            appUpdate:cardElevation="4dp"
            appUpdate:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="البريد الالكتروني للمستخدم"
                    android:textSize="@dimen/txt_subheading" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="right"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/txt_subheading"
                    android:theme="@style/EditText_NoBottomLine" />


                <TextView
                    android:id="@+id/lbl_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="نص الرسالة"
                    android:textSize="@dimen/txt_subheading"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|right"
                    android:hint="@string/message"
                    android:inputType="none"
                    android:maxLines="3"
                    android:paddingTop="@dimen/padding_5"
                    android:paddingBottom="@dimen/padding_5"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/txt_subheading"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/lbl_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:text="نص رسالة الادارة"
                    android:textSize="@dimen/txt_subheading" />

                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/message"
                    android:imeOptions="actionGo"
                    android:lines="2"
                    android:maxLines="3"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/txt_subheading"
                    android:theme="@style/EditText" />


                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_send"
                    android:layout_width="@dimen/icon_size_large"
                    android:layout_height="@dimen/icon_size_large"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/content_description"
                    android:padding="@dimen/padding_5"
                    android:scaleType="fitCenter"
                    appUpdate:layout_constraintBottom_toBottomOf="parent"
                    appUpdate:layout_constraintLeft_toLeftOf="parent"
                    appUpdate:layout_constraintTop_toTopOf="parent"
                    appUpdate:srcCompat="@drawable/icon_send" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>