<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appUpdate="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bSheet_playground_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    appUpdate:layout_behavior="com.malaab.ya.action.actionyamalaab.admin.custom.LockableBottomSheetBehavior">

    <ProgressBar
        android:id="@+id/pBar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_5"
        android:visibility="gone" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsc_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <include
                android:id="@+id/header"
                layout="@layout/header"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lbl_region"
                style="@style/Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_15"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_15"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/title_playground_size"
                android:textColor="@color/gray"
                android:textSize="@dimen/txt_subheading"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toBottomOf="@id/header" />

            <LinearLayout
                android:id="@+id/ln_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                appUpdate:layout_constraintStart_toStartOf="@id/lbl_region"
                appUpdate:layout_constraintTop_toBottomOf="@+id/lbl_region">

                <android.support.v7.widget.AppCompatImageButton
                    android:layout_width="@dimen/icon_size_small"
                    android:layout_height="@dimen/icon_size_small"
                    android:background="@null"
                    android:clickable="false"
                    android:contentDescription="@string/content_description"
                    android:padding="@dimen/padding_3"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimary"
                    appUpdate:layout_constraintBottom_toBottomOf="parent"
                    appUpdate:layout_constraintEnd_toStartOf="@id/header_btn_notifications"
                    appUpdate:layout_constraintTop_toTopOf="parent"
                    appUpdate:srcCompat="@drawable/icon_arrow_down" />

                <TextView
                    android:id="@+id/txt_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:text="@string/title_playground_size"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/txt_subheading" />

            </LinearLayout>


            <TextView
                android:id="@+id/lbl_duration"
                style="@style/Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/duration"
                android:textColor="@color/gray"
                android:textSize="@dimen/txt_subheading"
                appUpdate:layout_constraintStart_toStartOf="@id/lbl_region"
                appUpdate:layout_constraintTop_toBottomOf="@id/ln_size" />

            <LinearLayout
                android:id="@+id/ln_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                appUpdate:layout_constraintStart_toStartOf="@id/lbl_region"
                appUpdate:layout_constraintTop_toBottomOf="@+id/lbl_duration">

                <android.support.v7.widget.AppCompatImageButton
                    android:layout_width="@dimen/icon_size_small"
                    android:layout_height="@dimen/icon_size_small"
                    android:background="@null"
                    android:clickable="false"
                    android:contentDescription="@string/content_description"
                    android:padding="@dimen/padding_3"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimary"
                    appUpdate:layout_constraintBottom_toBottomOf="parent"
                    appUpdate:layout_constraintEnd_toStartOf="@id/header_btn_notifications"
                    appUpdate:layout_constraintTop_toTopOf="parent"
                    appUpdate:srcCompat="@drawable/icon_arrow_down" />

                <TextView
                    android:id="@+id/txt_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:text="@string/duration"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/txt_subheading" />

            </LinearLayout>


            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:layout_marginTop="@dimen/margin_15"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/content_description"
                android:padding="@dimen/padding_5"
                android:scaleType="fitCenter"
                android:tint="@color/semi_gray"
                appUpdate:layout_constraintEnd_toStartOf="@id/txt_datetime"
                appUpdate:layout_constraintTop_toBottomOf="@+id/ln_duration"
                appUpdate:srcCompat="@drawable/icon_calendar" />

            <TextView
                android:id="@+id/txt_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="اختر التاريخ والوقت"
                android:textSize="@dimen/txt_default"
                appUpdate:layout_constraintBottom_toBottomOf="@+id/btn_calendar"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toTopOf="@+id/btn_calendar" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_15"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toBottomOf="@+id/txt_datetime" />

            <ProgressBar
                android:id="@+id/pBar_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_10"
                android:visibility="gone"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toBottomOf="@+id/rv_days" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_times"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_15"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toBottomOf="@+id/rv_days" />


            <TextView
                android:id="@+id/lbl_price"
                style="@style/Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/title_price"
                android:textColor="@color/gray"
                android:textSize="@dimen/txt_subheading"
                appUpdate:layout_constraintStart_toStartOf="@id/lbl_region"
                appUpdate:layout_constraintTop_toBottomOf="@id/rv_times" />

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_15"
                android:background="@drawable/layout_border_full_grey"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/padding_10"
                android:textColor="@color/colorPrimary"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="@id/lbl_region"
                appUpdate:layout_constraintTop_toBottomOf="@id/lbl_price"
                tools:ignore="LabelFor" />


            <Button
                android:id="@+id/btn_saveAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:background="@drawable/btn_rounded_green"
                android:drawablePadding="@dimen/padding_15"
                android:drawableStart="@drawable/icon_add"
                android:padding="@dimen/padding_15"
                android:text="حفظ ثم اضافة يوم جديد"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_subheading"
                appUpdate:layout_constraintEnd_toEndOf="parent"
                appUpdate:layout_constraintStart_toStartOf="parent"
                appUpdate:layout_constraintTop_toBottomOf="@+id/edt_price" />

            <TextView
                android:id="@+id/txt_daysBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_default"
                appUpdate:layout_constraintEnd_toEndOf="@id/btn_saveAdd"
                appUpdate:layout_constraintStart_toStartOf="@id/btn_saveAdd"
                appUpdate:layout_constraintTop_toBottomOf="@+id/btn_saveAdd" />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_15"
                android:background="@drawable/btn_rounded_green"
                android:padding="@dimen/padding_15"
                android:text="رفع الملعب"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_subheading"
                appUpdate:layout_constraintBottom_toBottomOf="parent"
                appUpdate:layout_constraintEnd_toEndOf="@id/btn_saveAdd"
                appUpdate:layout_constraintStart_toStartOf="@id/btn_saveAdd"
                appUpdate:layout_constraintTop_toBottomOf="@+id/txt_daysBalance" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


    <include
        android:id="@+id/nsc_summary"
        layout="@layout/layout_summary"
        android:visibility="gone" />

    <include
        android:id="@+id/ln_result"
        layout="@layout/layout_result"
        android:visibility="gone" />

</RelativeLayout>

